<resources>
    <string name="app_name">Alerta!</string>
    <string name="about"></string>
    <string name="Permission">Permisos</string>
    <string name="location">Ubicación: este permiso es necesario para que podamos enviar su ubicación a su contacto cuando envíe su mensaje.</string>
    <string name="contacts">
Contactos: Necesitamos permiso para leer sus contactos para que pueda elegir a qué contactos contactar en caso de una emergencia.</string>
    <string name="sms">
Mensajes de texto (sms): Necesitamos este permiso para poder enviar un mensaje de texto a sus contactos en caso de una emergencia.</string>
    <string name="call">Llamada: También necesitamos permiso para que pueda hacer una llamada telefónica en caso de una emergencia..</string>
    <string name="permissionAbout">Estos son los permisos que nuestra aplicación requiere.</string>
    <string name="selectContacts">Haga clic en la flecha hacia adelante para otorgar acceso a los permisos y seleccione sus contactos para enviar el mensaje.</string>

    <!-- Settings view layout -->
    <string name="message_title">Mensaje</string>
    <string name="default_message">
       Necesito tu ayuda, porfavor ven de inmediato!
    </string>
    <string name="videoAddAbout">
       Si gusta contribuir con el desarollo de Alerta!, porfavor presione el siguiente boton para ver un corto video de 15 a 30 segundos.  Es totalmente gratis!</string>
    <string name="edit_button">Editar</string>
    <string name="input_message">Editar Mensaje de Emergencia</string>
    <string name="contacts_title">Contactos De Emergencia</string>
    <string name="remove_button">Retirar</string>
    <string name="add_button">Añadir</string>

    <!-- Rights view layout -->
    <array name="your_rights">
        <item>Tiene el derecho de mantener silencio</item>
        <item>Tiene el derecho de hablar con un abogado</item>
        <item>Tiene el derecho de grabar su encuentro con cualquier agente de ICE o Policia</item>
        <item>Pueden agentes de ICE o Policia entrar en mi hogar?</item>
        <item>Que hago si agentes de ICE of Policia avecinan en publico?</item>
        <item>Que pasa si ICE o Policia empiezan a esculcar sus bolsillos o pertenencias?</item>
        <item>Mas Informaction</item>
    </array>
    <array name="description">
        <item>
            Bajo la quinta enmienda de la Constitucion de los Estados Unidos, individuos pueden mantener silencio de no dar testimonio
            que los pueda enculpar de algun crimen o delito.  Ningun agente de ICE, policia, o cualquier otro agente del sistema judicial puede hacer que usted hable si no es su voluntad.
        </item>
        <item>
            Bajo la sexta enmienda de la Constitucion de los Estados Unidos, le da el derecho a un abogado si una persona a sido arrestada.
        </item>
        <item>
            Bajo la primer enmienda de la Constitucion de los Estados Unidos, usted tiene el derecho de grabar a los agentes de ICE o Policia.  Mientras no grabe a agentes de ICE o Policia en secreto, no hay ningun problema.
        </item>
        <item>
            Si agentes de ICE o Policia no tienen una orden firmada por un juez, no pueden entrar en tu hogar sin permiso de un adulto.  Antes de abrir la puerta, pida que le demuestren la orden firmada por el juez por debajo de su puerta.
            Si no tienen ninguna orden solo diga, \"No quiero hablar con ustedes, por mi seguridad porfavor dejen su informacion.\"  No mienta ni de documentos falsos, asi
            como tampoco corra ni resista si hay arresto.
        </item>
        <item>
            No responda ninguna pregunta, solo diga, \"Me puedo retirar?\" Si responden SI, conteste \"No quiero responder ninguna otra pregunta.\"  Si responden NO, solo diga,
            \"Quiero ejercir mi derecho de mantener silencio.  Solo voy a hablar con mi abogado.\"
        </item>
        <item>
            Simplemente diga a los agentes, \"Yo no doy concentimiento a que busquen en mis bolsillos o pertenencias\".
        </item>
        <item>
            Recuerde, el conocimiento es poder. Su mejor defensa es estar informado.  Hoy en dia es toda la informacion esta en la palma de su mano por medio de su telefono. Busque cualquier pregunta que usted tenga e informece.  Asuma la peor circumstancia y estece preparado por si llega a
            suceder.  Grabe cualquier encuentro que tenga usted con agentes de ICE o Policia.  Los derechos en esta applicacion an sido obtenidos por medio de Center for Constitutional Rights.
        </item>
    </array>
</resources>
